[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/godotoro/Icon_4.png" type="Texture" id=1]
[ext_resource path="res://addons/godotoro/button.gd" type="Script" id=2]
[ext_resource path="res://addons/godotoro/button_normal.tres" type="StyleBox" id=3]

[node name="Button" type="Panel" groups=["control"]]
visible = false
margin_right = 32.0
margin_bottom = 20.0
rect_min_size = Vector2( 32, 20 )
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
phase = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 32.0
margin_bottom = 16.0
rect_min_size = Vector2( 32, 20 )
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
modulate = Color( 0.631373, 0.662745, 0.694118, 1 )
margin_left = 8.0
margin_top = 2.0
margin_right = 24.0
margin_bottom = 18.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="." to="." method="_on_Button_gui_input"]
[connection signal="hide" from="." to="." method="_on_Button_hide"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
